Specify the right doc type for the PDF compositor.

When printing PDFs, the data type should be set to PDF. Normally this is
not an issue because the renderer will just send back PDF data anyway.
However, on PDF rendering failure, it defaults to the doc type to figure
out what to generate for the dummy data.

BUG=865793

Change-Id: I807688d07baa299af4319569a98ab2e07319cf39
Reviewed-on: https://chromium-review.googlesource.com/1144783
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577045}
Former-commit-id: 079e92c3bd4a131e004cd3ea5a30ec0509e991d6