components/printing/browser/print_manager_utils.cc
@@ -66,8 +66,9 @@ void RenderParamsFromPrintSettings(const PrintSettings& settings,
   params->display_header_footer = settings.display_header_footer();
   params->title = settings.title();
   params->url = settings.url();
-  params->printed_doc_type =
-      IsOopifEnabled() ? SkiaDocumentType::MSKP : SkiaDocumentType::PDF;
+  params->printed_doc_type = IsOopifEnabled() && settings.is_modifiable()
+                                 ? SkiaDocumentType::MSKP
+                                 : SkiaDocumentType::PDF;
   params->pages_per_sheet = settings.pages_per_sheet();
 }
 
